@@ -1,3 +1,8 @@
+TAG: littriageload-6-0-17-2
+DATE: 05/14/2021
+STAFF: lec
+b39-509/Lit Triage load issue/improve execution time
+
 TAG: littriageload-6-0-17-1
 DATE: 05/11/2021
 STAFF: lec
